--- a/src/ui/components/tmpy-client/template.hbs
+++ b/src/ui/components/tmpy-client/template.hbs
@@ -6,6 +6,6 @@
   <p>
     <small>Files are deleted automatically 15 minutes after the upload</small>
   </p>
-  <file-list @tmpyFiles={{tmpyFiles}} />
-  <file-upload @onUpload={{action onUpload}} />
+  <file-list @tmpyFiles={{tmpyFiles}}></file-list>
+  <file-upload @onUpload={{action onUpload}}></file-upload>
 </main>
