--- a/src/ui/styles/app.scss
+++ b/src/ui/styles/app.scss
@@ -115,18 +115,18 @@ progress {
 }
 progress::-moz-progress-bar {
   background-color: var(--color-primary);
-  transition: background-color 100ms;
+  transition: background-color 100ms, width 50ms;
 }
 progress:indeterminate::-moz-progress-bar {
   background-color: #dd9;
 }
 progress::-webkit-progress-value {
   background-color: var(--color-primary);
-  transition: background-color 100ms;
+  transition: background-color 100ms, width 50ms;
 }
 progress::-webkit-progress-bar {
   background-color: #eee;
-  transition: background-color 100ms;
+  transition: background-color 100ms, width 50ms;
 }
 progress:indeterminate::-webkit-progress-bar {
   background-color: #dd9;
