--- a/src/ui/components/tmpy-clipboard/template.hbs
+++ b/src/ui/components/tmpy-clipboard/template.hbs
@@ -1,1 +1,3 @@
-<button class="copy">📋</button>
+<button
+    class="copy {{if tooltip 'tooltipped tooltipped-s'}}"
+    aria-label={{tooltip}}>📋</button>
