Add background to dialog overlay

--- a/src/ui/styles/app.scss
+++ b/src/ui/styles/app.scss
@@ -59,6 +59,7 @@ a {
   justify-content: center;
   align-items: center;
   padding: 1rem;
+  background: rgba(23,23,23,.3);
 }
 .shell-script-dialog > pre {
   background: #fff;
