--- a/src/ui/components/tmpy-progress/template.hbs
+++ b/src/ui/components/tmpy-progress/template.hbs
@@ -1,4 +1,4 @@
 <div class="tmpy-progress {{if completed 'completed'}} {{if indeterminate 'indeterminate'}}"
-    style="--percent:{{if @percent @percent (percent max=@max value=@value precision=3)}}%">
+    style="--percent:{{if @percent (precision @percent 2) (percent max=@max value=@value precision=3)}}%">
   <span>{{~yield~}}</span>
 </div>
