Display file sizes

--- a/src/ui/components/file-list/template.hbs
+++ b/src/ui/components/file-list/template.hbs
@@ -3,16 +3,20 @@
     <li>
       <div class="tmpy-file tmpy-file-{{tmpyFile.progress.type}}">
         {{#if tmpyFile.completed}}
-          <a href={{tmpyFile.url}}>{{tmpyFile.file.name}}</a>
+          <a href={{tmpyFile.url}}>
+            {{~tmpyFile.name}}
+            {{#if tmpyFile.size}}- {{file-size tmpyFile.size}}{{/if~}}
+          </a>
           <tmpy-clipboard @content={{tmpyFile.url}}></tmpy-clipboard>
         {{else}}
           <tmpy-progress class="tmpy-progress-{{tmpyFile.progress.type}}"
               @percent={{tmpyFile.progress.percent}}>
-            {{#if tmpyFile.file.name}}
-              {{tmpyFile.file.name}}
+            {{#if tmpyFile.name}}
+              {{tmpyFile.name}}
             {{else}}
               {{tmpyFile.progress.currentFile}}
             {{/if}}
+            {{#if tmpyFile.size}}- {{file-size tmpyFile.size}}{{/if}}
             {{precision tmpyFile.progress.percent 0}}%
           </tmpy-progress>
         {{/if}}
