--- a/src/ui/components/tmpy-client/template.hbs
+++ b/src/ui/components/tmpy-client/template.hbs
@@ -18,19 +18,7 @@
   <p>
     <small>Files are deleted automatically 15 minutes after the upload</small>
   </p>
-  <!--
-    maybe a small toggle with "zip" on the right
-    on activate, slide in input with zip filename (default tmpy-archive.zip)
-    Change drop area to a "zip brown box" which opens on dragover or focus
-    -
-    Or the toggle button could be a triple document or "zip-box"
-    -
-    Or two different dropping areas
-    -
-    Also show zipping progress, probably need to refactor file-list wrap tmpy-file
-    and "zip progress object"
-  -->
-  <file-list @tmpyFiles={{tmpyFiles}}></file-list>
+  <file-list @tmpyFiles={{tmpyFiles}} @onDelete={{action deleteFile}}></file-list>
   <label class="zip-toggle">
     <input id="enableZip" class="toggle" type="checkbox" checked={{enableZip}} onchange={{action setEnableZip}}>
     <label for="enableZip"></label>
