Remove unnecessary div

--- a/src/ui/components/file-list/template.hbs
+++ b/src/ui/components/file-list/template.hbs
@@ -1,27 +1,25 @@
 <ul class="file-list">
   {{#each @tmpyFiles key="id" as |tmpyFile|}}
-    <li>
-      <div class="tmpy-file tmpy-file-{{tmpyFile.progress.type}}">
-        {{#if tmpyFile.completed}}
-          <a href={{tmpyFile.url}}>
-            {{~tmpyFile.name}}
-            {{#if tmpyFile.size}}- {{file-size tmpyFile.size}}{{/if~}}
-          </a>
-          <tmpy-clipboard class="copy" @content={{tmpyFile.url}}>📋</tmpy-clipboard>
-          <button class="delete" onclick={{action @onDelete tmpyFile}}>❌</button>
-        {{else}}
-          <tmpy-progress class="tmpy-progress-{{tmpyFile.progress.type}}"
-              @percent={{tmpyFile.progress.percent}}>
-            {{#if tmpyFile.name}}
-              {{tmpyFile.name}}
-            {{else}}
-              {{tmpyFile.progress.currentFile}}
-            {{/if}}
-            {{#if tmpyFile.size}}- {{file-size tmpyFile.size}}{{/if}}
-            {{precision tmpyFile.progress.percent 0}}%
-          </tmpy-progress>
-        {{/if}}
-      </div>
+    <li class="tmpy-file tmpy-file-{{tmpyFile.progress.type}}">
+      {{#if tmpyFile.completed}}
+        <a href={{tmpyFile.url}}>
+          {{~tmpyFile.name}}
+          {{#if tmpyFile.size}}- {{file-size tmpyFile.size}}{{/if~}}
+        </a>
+        <tmpy-clipboard class="copy" @content={{tmpyFile.url}}>📋</tmpy-clipboard>
+        <button class="delete" onclick={{action @onDelete tmpyFile}}>❌</button>
+      {{else}}
+        <tmpy-progress class="tmpy-progress-{{tmpyFile.progress.type}}"
+            @percent={{tmpyFile.progress.percent}}>
+          {{#if tmpyFile.name}}
+            {{tmpyFile.name}}
+          {{else}}
+            {{tmpyFile.progress.currentFile}}
+          {{/if}}
+          {{#if tmpyFile.size}}- {{file-size tmpyFile.size}}{{/if}}
+          {{precision tmpyFile.progress.percent 0}}%
+        </tmpy-progress>
+      {{/if}}
     </li>
   {{/each}}
 </ul>
