--- a/src/ui/components/FileList/template.hbs
+++ b/src/ui/components/FileList/template.hbs
@@ -6,10 +6,10 @@
           {{~tmpyFile.name}}
           {{#if tmpyFile.size}}- {{file-size tmpyFile.size}}{{/if~}}
         </a>
-        <tmpy-clipboard class="copy" @content={{tmpyFile.url}}>📋</tmpy-clipboard>
+        <TmpyClipboard class="copy" @content={{tmpyFile.url}}>📋</TmpyClipboard>
         <button class="delete" onclick={{action @onDelete tmpyFile}}>❌</button>
       {{else}}
-        <tmpy-progress class="tmpy-progress-{{tmpyFile.progress.type}}"
+        <TmpyProgress class="tmpy-progress-{{tmpyFile.progress.type}}"
             @percent={{tmpyFile.progress.percent}}>
           {{#if tmpyFile.name}}
             {{tmpyFile.name}}
@@ -18,7 +18,7 @@
           {{/if}}
           {{#if tmpyFile.size}}- {{file-size tmpyFile.size}}{{/if}}
           {{precision tmpyFile.progress.percent 0}}%
-        </tmpy-progress>
+        </TmpyProgress>
       {{/if}}
     </li>
   {{/each}}
