--- a/src/ui/components/TmpyProgress/template.hbs
+++ b/src/ui/components/TmpyProgress/template.hbs
@@ -1,4 +1,5 @@
 <div class="tmpy-progress {{if completed 'completed'}} {{if indeterminate 'indeterminate'}}"
-    style="--percent:{{if @percent (precision @percent 2) (percent max=@max value=@value precision=3)}}%">
+    style="--percent:{{if @percent (precision @percent 2) (percent max=@max value=@value precision=3)}}%"
+    ...attributes>
   <span>{{~yield~}}</span>
 </div>
